[project]
name = "wiki-race"
version = "0.1.0"
description = "This project implements an intelligent Wikipedia crawler that navigates from one article to another using semantic similarity."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "numpy>=2.3.5",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
]
